--- a/src/JSChess.html
+++ b/src/JSChess.html
@@ -28,6 +28,7 @@
 			<button type="button" id="NewGameButton">New Game</button>
 			<button type="button" id="FlipButton">Flip Board</button>
 			<button type="button" id="TakeButton">Take Back</button>
+			<button type="button" id="SearchButton">Move Now</button>
 		</div>
 		<script src="./JSChess_files/jquery-1.10.1.min.js"></script>
 		<!--<script src="js/all.js"></script>-->
